# bmfdec-refresh

./: CMakeLists.txt  README.md  cli.c  decompress.c  parser.c  printer.c
include/: decompress.h  parser.h  printer.h
